<resources>

    <string name="app_name">LunchList</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_lunch_list">LunchList</string>
    <string name="example_list_item">Click the MENU button to add a restaurant!</string>
    <string name="sort_dialog_title">Choose a sort order</string>
    <string name="sort_title">Sort Order</string>
    <string name="sort_description">Choose the order the list uses</string>
    <string name="feed_name">RSS Feed</string>
    <string name="no_internet">Sorry, the internet is not available</string>
    <string name="location">Location:</string>
    <string name="not_set">(not set)</string>
    <string name="save_location">Save Location</string>
    <string name="location_saved">Location saved.</string>
    <string name="show_map">Show on Map</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="sound_alarm">Sound a Lunch Alarm</string>
    <string name="sound_alarm_summary">Check if you want to know when it is time for lunch</string>
    <string name="alarm_time">Lunch Alarm Time</string>
    <string name="alarm_time_summary">Set your desired time for the lunch alarm</string>
    <string name="alarm_text">It\'s time for lunch!</string>
    <string name="notification_title">Use a Notification</string>
    <string name="notification_summary">Check if you want a status bar icon at lunchtime, or uncheck for a full-screen notice.</string>
    <string name="empty"/>
    <string name="help">Help</string>
    <string name="alarm_ringtone">Alarm Ringtone</string>
    <string name="alarm_summary">Indicate the ringtone to play when it is lunchtime</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="type">Type:</string>
    <string name="call">Call</string>

</resources>