<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:dialogTitle="@string/sort_dialog_title"
        android:entries="@array/sort_names"
        android:entryValues="@array/sort_clauses"
        android:key="sort_order"
        android:summary="@string/sort_description"
        android:title="@string/sort_title" />
    <CheckBoxPreference 
        android:key="alarm"
        android:title="@string/sound_alarm"
        android:summary="@string/sound_alarm_summary" />
    <csci498.bybeet.lunchlist.TimePreference
        android:key="alarm_time"
        android:title="@string/alarm_time"
        android:defaultValue="12:00"
        android:summary="@string/alarm_time_summary"
        android:dependency="alarm" />

</PreferenceScreen>